--- a/UnitTestsVertice/UnitTestsVertice.vcxproj.filters
+++ b/UnitTestsVertice/UnitTestsVertice.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="UnitTestsVertice.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="UnitTestsArco.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
