--- a/UnitTestsVertice/UnitTestsVertice.vcxproj
+++ b/UnitTestsVertice/UnitTestsVertice.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UnitTestsArco.cpp" />
+    <ClCompile Include="UnitTestsDespachadorEtiquetas.cpp" />
     <ClCompile Include="UnitTestsVertice.cpp" />
   </ItemGroup>
   <ItemGroup>
