--- a/UnitTestsVertice/UnitTestsVertice.vcxproj.filters
+++ b/UnitTestsVertice/UnitTestsVertice.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="UnitTestsArco.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="UnitTestsDespachadorEtiquetas.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
