Terminados los despachadores.
Se terminaron los despachadores de etiqutas y de lvev.
Se adecuaron los unit tests de las clases anteriores y se agregaron los
nuevos test para las clases nuevas.

--- a/UnitTestsVertice/UnitTestsVertice.vcxproj
+++ b/UnitTestsVertice/UnitTestsVertice.vcxproj
@@ -81,6 +81,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TestDespachadorLVEV.cpp" />
     <ClCompile Include="UnitTestsArco.cpp" />
     <ClCompile Include="UnitTestsDespachadorEtiquetas.cpp" />
     <ClCompile Include="UnitTestsVertice.cpp" />
