Inicia el desarrollo de la clase Grafo
Se hicieron una serie de mejoras y cambios:
DespachadorLVEV ahora maneja múltiples instancias, dependiendo del ID
que se pase al método GetInstancia(int), con sus respectivas pruebas
unitarias.

Se empezó con el desarrollo de la clase Grafo, sólo agregando los
métodos:
GetArcos()
CrearFormaCanónica()
istream& operator >>(istream&, Grafo&)

Por ahora sólo se hicieron pruebas unitarias para la lectura y el método
de GetArcos.

--- a/GraphMatchingLib/GraphMatchingLib.vcxproj
+++ b/GraphMatchingLib/GraphMatchingLib.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="DespachadorEtiquetas.h" />
     <ClInclude Include="DespachadorLVEV.h" />
     <ClInclude Include="Etiqueta.h" />
+    <ClInclude Include="Grafo.h" />
     <ClInclude Include="LVEV.h" />
     <ClInclude Include="Vertice.h" />
   </ItemGroup>
@@ -86,6 +87,7 @@
     <ClCompile Include="DespachadorEtiquetas.cpp" />
     <ClCompile Include="DespachadorLVEV.cpp" />
     <ClCompile Include="Etiqueta.cpp" />
+    <ClCompile Include="Grafo.cpp" />
     <ClCompile Include="LVEV.cpp" />
     <ClCompile Include="Vertice.cpp" />
   </ItemGroup>
