--- a/UnitTestsVertice/UnitTestsVertice.vcxproj
+++ b/UnitTestsVertice/UnitTestsVertice.vcxproj
@@ -81,9 +81,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestDespachadorLVEV.cpp" />
+    <ClCompile Include="UnitTestsDespachadorLVEV.cpp" />
     <ClCompile Include="UnitTestsArco.cpp" />
     <ClCompile Include="UnitTestsDespachadorEtiquetas.cpp" />
+    <ClCompile Include="UnitTestsGrafo.cpp" />
     <ClCompile Include="UnitTestsVertice.cpp" />
   </ItemGroup>
   <ItemGroup>
