Se empieza la construcción del matcheo.
Se agregó la clase Matcheador y la estructura Patron.
Además se agregaron nuevos métodos a la interfaz de Grafo, los cuales
son:
GetArcos sobrecargado.
EsAdyacente, que toma 2 arcos y verifica si ambos son adyacentes.

Se agregaron los comportamientos básicos de la clase Matcheador.
EsCandidato
MarcaExpansionPatron
MarcaExpansiones
Obtener raíces.

TODO:
Pruebas unitarias sobre los nuevos métodos de grafo.
Pruebas unitarias sobre los métodos de Matcheador.
Implementar cuerpo de ExpandirPatrones.

--- a/GraphMatchingLib/GraphMatchingLib.vcxproj
+++ b/GraphMatchingLib/GraphMatchingLib.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="Etiqueta.h" />
     <ClInclude Include="Grafo.h" />
     <ClInclude Include="LVEV.h" />
+    <ClInclude Include="Matcheador.h" />
     <ClInclude Include="Vertice.h" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +90,7 @@
     <ClCompile Include="Etiqueta.cpp" />
     <ClCompile Include="Grafo.cpp" />
     <ClCompile Include="LVEV.cpp" />
+    <ClCompile Include="Matcheador.cpp" />
     <ClCompile Include="Vertice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
