Terminadas pruebas unitarias básicas
Se han terminado las pruebas unitarias básicas de todos los métodos del
proyecto.

Se inició el codeo del proyecto principal.
Falta arreglar ciertos bugs:
1) Parece no terminar las iteraciones cuando se matchean 2 grafos que
son totalmente distintos.

--- a/UnitTestsVertice/UnitTestsVertice.vcxproj
+++ b/UnitTestsVertice/UnitTestsVertice.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile Include="UnitTestsArco.cpp" />
     <ClCompile Include="UnitTestsDespachadorEtiquetas.cpp" />
     <ClCompile Include="UnitTestsGrafo.cpp" />
+    <ClCompile Include="UnitTestsMatcheador.cpp" />
     <ClCompile Include="UnitTestsVertice.cpp" />
   </ItemGroup>
   <ItemGroup>
